Crash when add a any modifier to a curve #65918

Closed
opened 2019-06-19 04:17:23 +02:00 by Robert Zhang · 20 comments
Member

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 425.25

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-19 00:44, hash: 2299e6d9ba
Worked: (optional)

Short description of error
Crash when add a any modifier to a curve,curve need have face, bevel or extrude.

Exact steps for others to reproduce the error

  1. Add a curve and extrude size.
    2)Add subdivision/array/mirror...
    3)Crash~~
**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 425.25 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-19 00:44, hash: `2299e6d9ba` Worked: (optional) **Short description of error** Crash when add a any modifier to a curve,curve need have face, bevel or extrude. **Exact steps for others to reproduce the error** 1) Add a curve and extrude size. 2)Add subdivision/array/mirror... 3)Crash~~
Author
Member

Added subscriber: @zhanghua

Added subscriber: @zhanghua

#65970 was marked as duplicate of this issue

#65970 was marked as duplicate of this issue

#65972 was marked as duplicate of this issue

#65972 was marked as duplicate of this issue

#65992 was marked as duplicate of this issue

#65992 was marked as duplicate of this issue

#65934 was marked as duplicate of this issue

#65934 was marked as duplicate of this issue

#65930 was marked as duplicate of this issue

#65930 was marked as duplicate of this issue

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

I can confirm. Just add any modifier:
curve_modifier_crash.blend

I can confirm. Just add any modifier: [curve_modifier_crash.blend](https://archive.blender.org/developer/F7239168/curve_modifier_crash.blend)

Added subscribers: @fclem, @Sergey

Added subscribers: @fclem, @Sergey
Clément Foucault was assigned by Sergey Sharybin 2019-06-19 11:19:21 +02:00

@fclem ,seems to be something related on missing batch cache.
Could also be caused by recent curve modifier stack changes.

@fclem ,seems to be something related on missing batch cache. Could also be caused by recent curve modifier stack changes.
Brecht Van Lommel changed title from Emergency~~Crash when add a any modifier to a curve to Crash when add a any modifier to a curve 2019-06-19 11:38:44 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

Indeed caused by ba152cc88d.

Indeed caused by ba152cc88d.

This issue was referenced by 4dc71367c7

This issue was referenced by 4dc71367c7001a6d5395780e5493076d5d700300

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @justchris

Added subscriber: @justchris

Added subscriber: @arcnor

Added subscriber: @arcnor

Added subscriber: @aleksandrnovakovcg

Added subscriber: @aleksandrnovakovcg

Added subscribers: @TravLR, @finnb

Added subscribers: @TravLR, @finnb

Added subscribers: @Wolf999, @ideasman42

Added subscribers: @Wolf999, @ideasman42

I just tested with build 9c5d54bfaf (2019-06-23), and the issue appears to have been fixed. :)

I just tested with build 9c5d54bfaf48 (2019-06-23), and the issue appears to have been fixed. :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65918
No description provided.