Fix T65918 DRW: Crash when add a any modifier to a curve